seaqt/QtWidgets/gen_qmainwindow.h

typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDockWidget QDockWidget;
typedef struct QEvent QEvent;
typedef struct QMainWindow QMainWindow;
typedef struct QMenu QMenu;
typedef struct QMenuBar QMenuBar;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
typedef struct QStatusBar QStatusBar;
typedef struct QToolBar QToolBar;
typedef struct QWidget QWidget;
QMainWindow* QMainWindow_new(QWidget* parent);
QMainWindow* QMainWindow_new2();
QMainWindow* QMainWindow_new3(QWidget* parent, int flags);
QMetaObject* QMainWindow_metaObject(const QMainWindow* self);
void* QMainWindow_metacast(QMainWindow* self, const char* param1);
int QMainWindow_metacall(QMainWindow* self, int param1, int param2, void** param3);
struct miqt_string QMainWindow_tr(const char* s);
QSize* QMainWindow_iconSize(const QMainWindow* self);
void QMainWindow_setIconSize(QMainWindow* self, QSize* iconSize);
int QMainWindow_toolButtonStyle(const QMainWindow* self);
void QMainWindow_setToolButtonStyle(QMainWindow* self, int toolButtonStyle);
bool QMainWindow_isAnimated(const QMainWindow* self);
bool QMainWindow_isDockNestingEnabled(const QMainWindow* self);
bool QMainWindow_documentMode(const QMainWindow* self);
void QMainWindow_setDocumentMode(QMainWindow* self, bool enabled);
int QMainWindow_tabShape(const QMainWindow* self);
void QMainWindow_setTabShape(QMainWindow* self, int tabShape);
int QMainWindow_tabPosition(const QMainWindow* self, int area);
void QMainWindow_setTabPosition(QMainWindow* self, int areas, int tabPosition);
void QMainWindow_setDockOptions(QMainWindow* self, int options);
int QMainWindow_dockOptions(const QMainWindow* self);
bool QMainWindow_isSeparator(const QMainWindow* self, QPoint* pos);
QMenuBar* QMainWindow_menuBar(const QMainWindow* self);
void QMainWindow_setMenuBar(QMainWindow* self, QMenuBar* menubar);
QWidget* QMainWindow_menuWidget(const QMainWindow* self);
void QMainWindow_setMenuWidget(QMainWindow* self, QWidget* menubar);
QStatusBar* QMainWindow_statusBar(const QMainWindow* self);
void QMainWindow_setStatusBar(QMainWindow* self, QStatusBar* statusbar);
QWidget* QMainWindow_centralWidget(const QMainWindow* self);
void QMainWindow_setCentralWidget(QMainWindow* self, QWidget* widget);
QWidget* QMainWindow_takeCentralWidget(QMainWindow* self);
void QMainWindow_setCorner(QMainWindow* self, int corner, int area);
int QMainWindow_corner(const QMainWindow* self, int corner);
void QMainWindow_addToolBarBreak(QMainWindow* self);
void QMainWindow_insertToolBarBreak(QMainWindow* self, QToolBar* before);
void QMainWindow_addToolBar(QMainWindow* self, int area, QToolBar* toolbar);
void QMainWindow_addToolBarWithToolbar(QMainWindow* self, QToolBar* toolbar);
QToolBar* QMainWindow_addToolBarWithTitle(QMainWindow* self, struct miqt_string title);
void QMainWindow_insertToolBar(QMainWindow* self, QToolBar* before, QToolBar* toolbar);
void QMainWindow_removeToolBar(QMainWindow* self, QToolBar* toolbar);
void QMainWindow_removeToolBarBreak(QMainWindow* self, QToolBar* before);
bool QMainWindow_unifiedTitleAndToolBarOnMac(const QMainWindow* self);
int QMainWindow_toolBarArea(const QMainWindow* self, QToolBar* toolbar);
bool QMainWindow_toolBarBreak(const QMainWindow* self, QToolBar* toolbar);
void QMainWindow_addDockWidget(QMainWindow* self, int area, QDockWidget* dockwidget);
void QMainWindow_addDockWidget2(QMainWindow* self, int area, QDockWidget* dockwidget, int orientation);
void QMainWindow_splitDockWidget(QMainWindow* self, QDockWidget* after, QDockWidget* dockwidget, int orientation);
void QMainWindow_tabifyDockWidget(QMainWindow* self, QDockWidget* first, QDockWidget* second);
struct miqt_array /* of QDockWidget* */  QMainWindow_tabifiedDockWidgets(const QMainWindow* self, QDockWidget* dockwidget);
void QMainWindow_removeDockWidget(QMainWindow* self, QDockWidget* dockwidget);
bool QMainWindow_restoreDockWidget(QMainWindow* self, QDockWidget* dockwidget);
int QMainWindow_dockWidgetArea(const QMainWindow* self, QDockWidget* dockwidget);
void QMainWindow_resizeDocks(QMainWindow* self, struct miqt_array /* of QDockWidget* */  docks, struct miqt_array /* of int */  sizes, int orientation);
struct miqt_string QMainWindow_saveState(const QMainWindow* self);
bool QMainWindow_restoreState(QMainWindow* self, struct miqt_string state);
QMenu* QMainWindow_createPopupMenu(QMainWindow* self);
void QMainWindow_setAnimated(QMainWindow* self, bool enabled);
void QMainWindow_setDockNestingEnabled(QMainWindow* self, bool enabled);
void QMainWindow_setUnifiedTitleAndToolBarOnMac(QMainWindow* self, bool set);
void QMainWindow_iconSizeChanged(QMainWindow* self, QSize* iconSize);
void QMainWindow_connect_iconSizeChanged(QMainWindow* self, intptr_t slot);
void QMainWindow_toolButtonStyleChanged(QMainWindow* self, int toolButtonStyle);
void QMainWindow_connect_toolButtonStyleChanged(QMainWindow* self, intptr_t slot);
void QMainWindow_tabifiedDockWidgetActivated(QMainWindow* self, QDockWidget* dockWidget);
void QMainWindow_connect_tabifiedDockWidgetActivated(QMainWindow* self, intptr_t slot);
struct miqt_string QMainWindow_tr2(const char* s, const char* c);
struct miqt_string QMainWindow_tr3(const char* s, const char* c, int n);
void QMainWindow_addToolBarBreak1(QMainWindow* self, int area);
struct miqt_string QMainWindow_saveState1(const QMainWindow* self, int version);
bool QMainWindow_restoreState2(QMainWindow* self, struct miqt_string state, int version);
bool QMainWindow_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QMainWindow_virtualbase_metaObject(const void* self);
bool QMainWindow_override_virtual_metacast(void* self, intptr_t slot);
void* QMainWindow_virtualbase_metacast(void* self, const char* param1);
bool QMainWindow_override_virtual_metacall(void* self, intptr_t slot);
int QMainWindow_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QMainWindow_override_virtual_createPopupMenu(void* self, intptr_t slot);
QMenu* QMainWindow_virtualbase_createPopupMenu(void* self);
bool QMainWindow_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QMainWindow_override_virtual_event(void* self, intptr_t slot);
bool QMainWindow_virtualbase_event(void* self, QEvent* event);
bool QMainWindow_override_virtual_devType(void* self, intptr_t slot);
int QMainWindow_virtualbase_devType(const void* self);
bool QMainWindow_override_virtual_setVisible(void* self, intptr_t slot);
void QMainWindow_virtualbase_setVisible(void* self, bool visible);
bool QMainWindow_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QMainWindow_virtualbase_sizeHint(const void* self);
bool QMainWindow_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QMainWindow_virtualbase_minimumSizeHint(const void* self);
bool QMainWindow_override_virtual_heightForWidth(void* self, intptr_t slot);
int QMainWindow_virtualbase_heightForWidth(const void* self, int param1);
bool QMainWindow_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QMainWindow_virtualbase_hasHeightForWidth(const void* self);
bool QMainWindow_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QMainWindow_virtualbase_paintEngine(const void* self);
bool QMainWindow_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QMainWindow_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QMainWindow_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);