seaqt/QtWidgets/gen_qmainwindow.nim


proc fcQMainWindow_new(parent: pointer): ptr cQMainWindow {.importc: "QMainWindow_new".}
proc fcQMainWindow_new2(): ptr cQMainWindow {.importc: "QMainWindow_new2".}
proc fcQMainWindow_new3(parent: pointer, flags: cint): ptr cQMainWindow {.importc: "QMainWindow_new3".}
proc fcQMainWindow_metaObject(self: pointer, ): pointer {.importc: "QMainWindow_metaObject".}
proc fcQMainWindow_metacast(self: pointer, param1: cstring): pointer {.importc: "QMainWindow_metacast".}
proc fcQMainWindow_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMainWindow_metacall".}
proc fcQMainWindow_tr(s: cstring): struct_miqt_string {.importc: "QMainWindow_tr".}
proc fcQMainWindow_iconSize(self: pointer, ): pointer {.importc: "QMainWindow_iconSize".}
proc fcQMainWindow_setIconSize(self: pointer, iconSize: pointer): void {.importc: "QMainWindow_setIconSize".}
proc fcQMainWindow_toolButtonStyle(self: pointer, ): cint {.importc: "QMainWindow_toolButtonStyle".}
proc fcQMainWindow_setToolButtonStyle(self: pointer, toolButtonStyle: cint): void {.importc: "QMainWindow_setToolButtonStyle".}
proc fcQMainWindow_isAnimated(self: pointer, ): bool {.importc: "QMainWindow_isAnimated".}
proc fcQMainWindow_isDockNestingEnabled(self: pointer, ): bool {.importc: "QMainWindow_isDockNestingEnabled".}
proc fcQMainWindow_documentMode(self: pointer, ): bool {.importc: "QMainWindow_documentMode".}
proc fcQMainWindow_setDocumentMode(self: pointer, enabled: bool): void {.importc: "QMainWindow_setDocumentMode".}
proc fcQMainWindow_tabShape(self: pointer, ): cint {.importc: "QMainWindow_tabShape".}
proc fcQMainWindow_setTabShape(self: pointer, tabShape: cint): void {.importc: "QMainWindow_setTabShape".}
proc fcQMainWindow_tabPosition(self: pointer, area: cint): cint {.importc: "QMainWindow_tabPosition".}
proc fcQMainWindow_setTabPosition(self: pointer, areas: cint, tabPosition: cint): void {.importc: "QMainWindow_setTabPosition".}
proc fcQMainWindow_setDockOptions(self: pointer, options: cint): void {.importc: "QMainWindow_setDockOptions".}
proc fcQMainWindow_dockOptions(self: pointer, ): cint {.importc: "QMainWindow_dockOptions".}
proc fcQMainWindow_isSeparator(self: pointer, pos: pointer): bool {.importc: "QMainWindow_isSeparator".}
proc fcQMainWindow_menuBar(self: pointer, ): pointer {.importc: "QMainWindow_menuBar".}
proc fcQMainWindow_setMenuBar(self: pointer, menubar: pointer): void {.importc: "QMainWindow_setMenuBar".}
proc fcQMainWindow_menuWidget(self: pointer, ): pointer {.importc: "QMainWindow_menuWidget".}
proc fcQMainWindow_setMenuWidget(self: pointer, menubar: pointer): void {.importc: "QMainWindow_setMenuWidget".}
proc fcQMainWindow_statusBar(self: pointer, ): pointer {.importc: "QMainWindow_statusBar".}
proc fcQMainWindow_setStatusBar(self: pointer, statusbar: pointer): void {.importc: "QMainWindow_setStatusBar".}
proc fcQMainWindow_centralWidget(self: pointer, ): pointer {.importc: "QMainWindow_centralWidget".}
proc fcQMainWindow_setCentralWidget(self: pointer, widget: pointer): void {.importc: "QMainWindow_setCentralWidget".}
proc fcQMainWindow_takeCentralWidget(self: pointer, ): pointer {.importc: "QMainWindow_takeCentralWidget".}
proc fcQMainWindow_setCorner(self: pointer, corner: cint, area: cint): void {.importc: "QMainWindow_setCorner".}
proc fcQMainWindow_corner(self: pointer, corner: cint): cint {.importc: "QMainWindow_corner".}
proc fcQMainWindow_addToolBarBreak(self: pointer, ): void {.importc: "QMainWindow_addToolBarBreak".}
proc fcQMainWindow_insertToolBarBreak(self: pointer, before: pointer): void {.importc: "QMainWindow_insertToolBarBreak".}
proc fcQMainWindow_addToolBar(self: pointer, area: cint, toolbar: pointer): void {.importc: "QMainWindow_addToolBar".}
proc fcQMainWindow_addToolBarWithToolbar(self: pointer, toolbar: pointer): void {.importc: "QMainWindow_addToolBarWithToolbar".}
proc fcQMainWindow_addToolBarWithTitle(self: pointer, title: struct_miqt_string): pointer {.importc: "QMainWindow_addToolBarWithTitle".}
proc fcQMainWindow_insertToolBar(self: pointer, before: pointer, toolbar: pointer): void {.importc: "QMainWindow_insertToolBar".}
proc fcQMainWindow_removeToolBar(self: pointer, toolbar: pointer): void {.importc: "QMainWindow_removeToolBar".}
proc fcQMainWindow_removeToolBarBreak(self: pointer, before: pointer): void {.importc: "QMainWindow_removeToolBarBreak".}
proc fcQMainWindow_unifiedTitleAndToolBarOnMac(self: pointer, ): bool {.importc: "QMainWindow_unifiedTitleAndToolBarOnMac".}
proc fcQMainWindow_toolBarArea(self: pointer, toolbar: pointer): cint {.importc: "QMainWindow_toolBarArea".}
proc fcQMainWindow_toolBarBreak(self: pointer, toolbar: pointer): bool {.importc: "QMainWindow_toolBarBreak".}
proc fcQMainWindow_addDockWidget(self: pointer, area: cint, dockwidget: pointer): void {.importc: "QMainWindow_addDockWidget".}
proc fcQMainWindow_addDockWidget2(self: pointer, area: cint, dockwidget: pointer, orientation: cint): void {.importc: "QMainWindow_addDockWidget2".}
proc fcQMainWindow_splitDockWidget(self: pointer, after: pointer, dockwidget: pointer, orientation: cint): void {.importc: "QMainWindow_splitDockWidget".}
proc fcQMainWindow_tabifyDockWidget(self: pointer, first: pointer, second: pointer): void {.importc: "QMainWindow_tabifyDockWidget".}
proc fcQMainWindow_tabifiedDockWidgets(self: pointer, dockwidget: pointer): struct_miqt_array {.importc: "QMainWindow_tabifiedDockWidgets".}
proc fcQMainWindow_removeDockWidget(self: pointer, dockwidget: pointer): void {.importc: "QMainWindow_removeDockWidget".}
proc fcQMainWindow_restoreDockWidget(self: pointer, dockwidget: pointer): bool {.importc: "QMainWindow_restoreDockWidget".}
proc fcQMainWindow_dockWidgetArea(self: pointer, dockwidget: pointer): cint {.importc: "QMainWindow_dockWidgetArea".}
proc fcQMainWindow_resizeDocks(self: pointer, docks: struct_miqt_array, sizes: struct_miqt_array, orientation: cint): void {.importc: "QMainWindow_resizeDocks".}
proc fcQMainWindow_saveState(self: pointer, ): struct_miqt_string {.importc: "QMainWindow_saveState".}
proc fcQMainWindow_restoreState(self: pointer, state: struct_miqt_string): bool {.importc: "QMainWindow_restoreState".}
proc fcQMainWindow_createPopupMenu(self: pointer, ): pointer {.importc: "QMainWindow_createPopupMenu".}
proc fcQMainWindow_setAnimated(self: pointer, enabled: bool): void {.importc: "QMainWindow_setAnimated".}
proc fcQMainWindow_setDockNestingEnabled(self: pointer, enabled: bool): void {.importc: "QMainWindow_setDockNestingEnabled".}
proc fcQMainWindow_setUnifiedTitleAndToolBarOnMac(self: pointer, set: bool): void {.importc: "QMainWindow_setUnifiedTitleAndToolBarOnMac".}
proc fcQMainWindow_iconSizeChanged(self: pointer, iconSize: pointer): void {.importc: "QMainWindow_iconSizeChanged".}
proc fcQMainWindow_connect_iconSizeChanged(self: pointer, slot: int) {.importc: "QMainWindow_connect_iconSizeChanged".}
proc fcQMainWindow_toolButtonStyleChanged(self: pointer, toolButtonStyle: cint): void {.importc: "QMainWindow_toolButtonStyleChanged".}
proc fcQMainWindow_connect_toolButtonStyleChanged(self: pointer, slot: int) {.importc: "QMainWindow_connect_toolButtonStyleChanged".}
proc fcQMainWindow_tabifiedDockWidgetActivated(self: pointer, dockWidget: pointer): void {.importc: "QMainWindow_tabifiedDockWidgetActivated".}
proc fcQMainWindow_connect_tabifiedDockWidgetActivated(self: pointer, slot: int) {.importc: "QMainWindow_connect_tabifiedDockWidgetActivated".}
proc fcQMainWindow_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMainWindow_tr2".}
proc fcQMainWindow_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMainWindow_tr3".}
proc fcQMainWindow_addToolBarBreak1(self: pointer, area: cint): void {.importc: "QMainWindow_addToolBarBreak1".}
proc fcQMainWindow_saveState1(self: pointer, version: cint): struct_miqt_string {.importc: "QMainWindow_saveState1".}
proc fcQMainWindow_restoreState2(self: pointer, state: struct_miqt_string, version: cint): bool {.importc: "QMainWindow_restoreState2".}
proc fQMainWindow_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QMainWindow_virtualbase_metaObject".}
proc fcQMainWindow_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_metaObject".}
proc fQMainWindow_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QMainWindow_virtualbase_metacast".}
proc fcQMainWindow_override_virtual_metacast(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_metacast".}
proc fQMainWindow_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QMainWindow_virtualbase_metacall".}
proc fcQMainWindow_override_virtual_metacall(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_metacall".}
proc fQMainWindow_virtualbase_createPopupMenu(self: pointer, ): pointer{.importc: "QMainWindow_virtualbase_createPopupMenu".}
proc fcQMainWindow_override_virtual_createPopupMenu(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_createPopupMenu".}
proc fQMainWindow_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_contextMenuEvent".}
proc fcQMainWindow_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_contextMenuEvent".}
proc fQMainWindow_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QMainWindow_virtualbase_event".}
proc fcQMainWindow_override_virtual_event(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_event".}
proc fQMainWindow_virtualbase_devType(self: pointer, ): cint{.importc: "QMainWindow_virtualbase_devType".}
proc fcQMainWindow_override_virtual_devType(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_devType".}
proc fQMainWindow_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QMainWindow_virtualbase_setVisible".}
proc fcQMainWindow_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_setVisible".}
proc fQMainWindow_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QMainWindow_virtualbase_sizeHint".}
proc fcQMainWindow_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_sizeHint".}
proc fQMainWindow_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QMainWindow_virtualbase_minimumSizeHint".}
proc fcQMainWindow_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_minimumSizeHint".}
proc fQMainWindow_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QMainWindow_virtualbase_heightForWidth".}
proc fcQMainWindow_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_heightForWidth".}
proc fQMainWindow_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QMainWindow_virtualbase_hasHeightForWidth".}
proc fcQMainWindow_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_hasHeightForWidth".}
proc fQMainWindow_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QMainWindow_virtualbase_paintEngine".}
proc fcQMainWindow_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_paintEngine".}
proc fQMainWindow_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_mousePressEvent".}
proc fcQMainWindow_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_mousePressEvent".}
proc fQMainWindow_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QMainWindow_virtualbase_mouseReleaseEvent".}
proc fcQMainWindow_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QMainWindow_override_virtual_mouseReleaseEvent".}
